--- a/index.html
+++ b/index.html
@@ -24,4 +24,7 @@
   </main>
 
   <footer>
-    <p>© 2025 AX21. Powered by
+    <p>© 2025 AX21. Powered by VYNIX Ecosystem.</p>
+  </footer>
+</body>
+</html>
